--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="initial-loader">
@@ -135,5 +136,6 @@
         });
     </script>
     <script type="module" src="index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
